--- a/app/assets/stylesheets/bootstrap_variable_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_variable_overrides.css.scss
@@ -23,6 +23,7 @@ $paragraph-margin-bottom:   0.875rem;
 $blockquote-font-size: $font-size-base;
 
 $alert-bg-scale: 0%;
+$alert-border-scale: 0%;
 
 $blue:    $blue-500;
 $indigo:  $indigo-500;
